--- a/papers/index.html
+++ b/papers/index.html
@@ -29,7 +29,7 @@ DOI: 10.1002/sim.5735</span><span style="line-height: 1.25; font-family: CMR10; 
 <div title="Page 1">
 <div>
 <div>
-<p style="text-align: center;"><b style="line-height:1.25;font-size:10pt;background-color:transparent"><font size="4"><span style="text-align:left;font-family:CMCSC10;line-height:1.25">Manuscript</span></font></b></p>
+<p style="text-align: center;"><b style="line-height:1.25;font-size:10pt;background-color:transparent"><font size="4"><span style="text-align:left;font-family:CMCSC10;line-height:1.25">Manuscripts</span></font></b></p>
 </div>
 </div>
 </div>
