--- a/papers/index.html
+++ b/papers/index.html
@@ -7,11 +7,23 @@
 <div class="layoutArea">
 <div class="column">
 <p></p>
-<ul><li><span style="line-height: 1.25; font-size: 10pt; font-family: CMBX10; background-color: transparent;"><font size="3"><b>&nbsp; &nbsp; &nbsp; &nbsp;Fei Jiang</b></font></span><font size="3" style="background-color: transparent;"><span style="line-height: 1.25; font-family: CMR10; background-color: transparent;">, Yanyuan Ma, Yuanjia Wang, Fused Kernel-Spline Smoothing for Repeatedly Measured
-Outcomes in a Generalized Partially Linear Model with Functional Single Index, accepted by </span><i><span style="line-height: 1.25; font-family: CMTI10; background-color: transparent;">Annals
-of Statistics</span><span style="line-height: 1.25; font-family: CMR10; background-color: transparent;">.</span></i></font></li>
-<li><font size="3"><span style="line-height: 1.25; font-family: CMBX10; background-color: transparent;">&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<b>&nbsp;Fei Jiang</b></span><span style="line-height: 1.25; font-family: CMR10; background-color: transparent;">, J. Jack Lee and Peter Mueller, A Bayesian Decision-theoretic Sequential-Response Adap-
-tive Randomization Design, published in </span><i><span style="line-height: 1.25; font-family: CMTI10; background-color: transparent;">Volume 32, Issue 12, pages 1975-1994, Statistics in Medicine,
+<ul><li><span style="line-height: 1.25; font-size: 10pt; font-family:
+  CMBX10; background-color: transparent;"><font size="3"><b>&nbsp;
+  &nbsp; &nbsp; &nbsp;Fei Jiang</b></font></span><font size="3"
+  style="background-color: transparent;"><span style="line-height:
+  1.25; font-family: CMR10; background-color: transparent;">, Yanyuan
+  Ma, Yuanjia Wang <a class="entry-content entry-title" href="AOS1330.pdf"> Fused Kernel-Spline Smoothing for Repeatedly Measured
+Outcomes in a Generalized Partially Linear Model with Functional
+  Single Index, </a>published in </span><i><span style="line-height:
+  1.25; font-family: CMTI10; background-color: transparent;">Volume
+  43, Issue 5, pages 1929-1958, Annals
+of Statistics, DOI:10.1214/15-AOS1330</span><span style="line-height: 1.25; font-family: CMR10; background-color: transparent;">.</span></i></font></li>
+<li><font size="3"><span style="line-height: 1.25; font-family:
+CMBX10; background-color: transparent;">&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<b>&nbsp;Fei Jiang</b></span><span
+style="line-height: 1.25; font-family: CMR10; background-color:
+transparent;">, J. Jack Lee and Peter Mueller, <a class="entry-content entry-title" href="reprint1.pdf"> A Bayesian Decision-theoretic Sequential-Response Adap-
+tive Randomization Design,</a> published in </span><i><span style="line-height: 1.25; font-family: CMTI10; background-color: transparent;">Volume 32, Issue 12, pages 1975-1994, Statistics in Medicine,
 DOI: 10.1002/sim.5735</span><span style="line-height: 1.25; font-family: CMR10; background-color: transparent;">.</span><span style="line-height: 1.25; font-family: CMR10; background-color: transparent;">&nbsp;</span></i></font></li></ul>
 <p></p>
 		
